--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,15 @@ before_install:
 script:
   - docker run -e CI=true weekbelt/docker-react-app npm run test -- --coverage
 
-after_success:
-  - echo "Test scuccess"
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-northeast-2"
+  app: "docker-react-app"
+  env: "DockerReactApp-env"
+  bucket_name: "elasticbeanstalk-ap-northeast-2-292446943637"
+  bucket_path: "docker-react-app"
+  on:
+    branch: master
+
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_ACCESS_KEY
